vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__concurrent_statement__tests__if_generate_declarative_region.snap
---
source: vhdl_syntax/src/parser/productions/concurrent_statement.rs
expression: "stmt_to_test_text(\"\\\ngen: if cond = true generate\nbegin\nend generate;\",)"
---
IfGenerateStatement
  Label
    Identifier 'gen'
    Colon
  IfGenerateIf
    Keyword(If)
    BinaryExpression
      NameExpression
        Name
          NameDesignatorPrefix
            Identifier 'cond'
      EQ
      NameExpression
        Name
          NameDesignatorPrefix
            Identifier 'true'
    Keyword(Generate)
    GenerateStatementBody
      DeclarationStatementSeparator
        Keyword(Begin)
  IfGenerateStatementEpilogue
    Keyword(End)
    Keyword(Generate)
    SemiColon
