vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__concurrent_statement__tests__labeled_concurrent_procedure.snap
---
source: vhdl_syntax/src/parser/productions/concurrent_statement.rs
expression: "stmt_to_test_text(\"name: foo(clk);\",)"
---
ConcurrentProcedureCallOrComponentInstantiationStatement
  StmtLabel
    Identifier 'name'
    Colon
  Name
    NameDesignatorPrefix
      Identifier 'foo'
    ParenthesizedName
      LeftPar
      AssociationList
        AssociationElement
          ActualPart
            ActualPartExpression
              NameExpression
                Name
                  NameDesignatorPrefix
                    Identifier 'clk'
      RightPar
  SemiColon
