vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__concurrent_statement__tests__postponed_concurrent_assert.snap
---
source: vhdl_syntax/src/parser/productions/concurrent_statement.rs
expression: "stmt_to_test_text(\"postponed assert cond = true;\",)"
---
ConcurrentAssertionStatement
  Keyword(Postponed)
  Assertion
    Keyword(Assert)
    BinaryExpression
      NameExpression
        Name
          NameDesignatorPrefix
            Identifier 'cond'
      EQ
      NameExpression
        Name
          NameDesignatorPrefix
            Identifier 'true'
  SemiColon
