vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__concurrent_statement__tests__postponed_concurrent_procedure.snap
---
source: vhdl_syntax/src/parser/productions/concurrent_statement.rs
expression: "stmt_to_test_text(\"postponed foo(clk);\",)"
---
ConcurrentProcedureCallOrComponentInstantiationStatement
  Keyword(Postponed)
  Name
    Identifier 'foo'
    ParenthesizedName
      LeftPar
      AssociationList
        AssociationElement
          ActualPart
            ActualPartExpression
              NameExpression
                Name
                  Identifier 'clk'
      RightPar
  SemiColon
